--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
-ul,
+/* ul,
 ol {
     list-style: none;
     padding: 0;
     margin: 0;
-}
+} */
 
 li {
     padding: 0;
     margin: 0;
 }
+
+body {
+    font-family: 'Oswald', sans-serif;
+    /* Используем шрифт Oswald */
+    margin: 0;
+    padding: 0;
+    background-color: #A1CAF1;
+    /* Пример фона */
+}
+
+
 
 .main__wrapper {
     display: flex;
@@ -137,11 +148,22 @@ li {
     .contact {
         display: none;
         margin-top: 10px;
+        flex-direction: column;
+        align-items: center;
     }
 
     .services-list {
         display: none;
         margin-top: 10px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .command-list {
+        display: flex;
+        margin-top: 10px;
+        flex-direction: column;
+        align-items: center;
     }
 
     .menu {
@@ -168,12 +190,34 @@ li {
     }
 
     .adress {
+
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
+        flex-direction: row;
+        width: 100%;
     }
 
     .address__item {
         display: flex;
         flex-direction: column;
+    }
+
+    .answer {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        background: #7FB3D5;
+        border: solid 1px #7FB3D5;
+        border-radius: 5px;
+    }
+
+    .answer__content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .answer__anchor {
+        display: flex;
+        justify-content: space-around
     }
 }
